--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "react-image-crop-lite",
   "version": "1.0.0",
   "description": "An image cropping tool for React with no dependencies.",
-  "main": "index.js",
+  "main": "./lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,22 @@
   "bugs": {
     "url": "https://github.com/B-techiexyz/react-image-crop-lite/issues"
   },
-  "homepage": "https://github.com/B-techiexyz/react-image-crop-lite#readme"
+  "homepage": "https://github.com/B-techiexyz/react-image-crop-lite#readme",
+  "peerDependencies": {
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.21.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "path": "^0.12.7",
+    "prop-types": "^15.6.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^3.2.1"
+  }
 }
